@@ -1,4 +1,10 @@
 
+2018-05-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* parser.y (usage_clause): better error message if USAGE is explicit
+	  coded and an undefined word follows; this is especially helpful
+	  for words that are only not reserved in the current dialect
+
 2018-05-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c (cb_check_overlapping): resolve one-level subscripts
